--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,5 +12,8 @@ Style/Encoding:
   Enabled: true
 
 Style/AlignHash:
-  EnforcedHashRocketStyle: separator
+  EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
+
+Metrics/LineLength:
+  Max: 120
